// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers::notes() responds to events 1`] = `
Map {
  1 => Object {
    "archived": false,
    "body": "body",
    "created_at": "",
    "id": 1,
    "parent_note_id": 0,
    "pinned": false,
    "tags": Array [],
    "title": "title",
    "updated_at": "",
    "user_id": 1,
  },
}
`;

exports[`reducers::notes() responds to events 2`] = `
Map {
  1 => Object {
    "archived": false,
    "body": "body",
    "created_at": "",
    "id": 1,
    "parent_note_id": 0,
    "pinned": false,
    "tags": Array [],
    "title": "title 3",
    "updated_at": "",
    "user_id": 1,
  },
}
`;

exports[`reducers::notes() responds to events 3`] = `
Map {
  1 => Object {
    "archived": false,
    "body": "body",
    "created_at": "",
    "id": 1,
    "parent_note_id": 0,
    "pinned": false,
    "tags": Array [],
    "title": "title 3",
    "updated_at": "",
    "user_id": 1,
  },
  2 => Object {
    "archived": false,
    "body": "body",
    "created_at": "",
    "id": 2,
    "parent_note_id": 0,
    "pinned": false,
    "tags": Array [],
    "title": "title 4",
    "updated_at": "",
    "user_id": 1,
  },
}
`;

exports[`reducers::notes() responds to events 4`] = `
Map {
  1 => Object {
    "archived": false,
    "body": "body",
    "created_at": "",
    "id": 1,
    "parent_note_id": 0,
    "pinned": false,
    "tags": Array [],
    "title": "title 3",
    "updated_at": "",
    "user_id": 1,
  },
}
`;

exports[`reducers::notes() responds to events 5`] = `Map {}`;

exports[`reducers::notes() responds to events 6`] = `Map {}`;
